syntax = "proto3";

package billing;
option java_multiple_files = true;
option java_package = "com.example.grpc";
option java_outer_classname = "BillingProto";


service BillingService {
  rpc Charge (ChargeRequest) returns (ChargeResponse);
}

message ChargeRequest {
  int64 orderId = 1;
  double amount = 2;
}

message ChargeResponse {
  bool success = 1;
}
